--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <h1>Aplicación en JavaScript</h1>
+    <h2>
+      Por favor, abre la consola del navegador para visualizar el funcionamiento
+      de la aplicación
+    </h2>
+    <button id="initBtn">Haz click aquí para empezar</button>
 
     <script src="./assets/js/index.js"></script>
   </body>
