Lección 3: Arreglo, ciclos y función de filtrado en la calculadora

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Por favor, abre la consola del navegador para visualizar el funcionamiento
       de la aplicación
     </h2>
-    <button id="initBtn">Haz click aquí para empezar</button>
+    <button id="initBtn">Haz click aquí para calcular</button>
 
     <script src="./assets/js/index.js"></script>
   </body>
